--- a/src/concentration/components/card/card.module.css
+++ b/src/concentration/components/card/card.module.css
@@ -1,26 +1,23 @@
-.card {
-    background-color: #A8E6CE;
+.container {
+    position: relative;
     font-size: 5rem;
     border-radius: 0.3em;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.card {
+    background-color: #A8E6CE;
+    
 }
 
 .faceDown {
     background-color: #363636;
-    font-size: 5rem;
-    border-radius: 0.3em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* position: absolute;
+    backface-visibility: hidden; */
 }
 
 .matched {
     background-color: rgba(0, 0, 0, 0);
-    font-size: 5rem;
-    border-radius: 0.3em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
